src-ken&y/objects/Pricebook__c.object
<CustomObject>
    <customHelpPage>HelpPricebooks</customHelpPage>
    <description>List prices for a company and the products it sells</description>
    <fields>
        <fullName>Company_Identifier__c</fullName>
        <description>identifier for data loading, sets the company lookup</description>
        <label>Company Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The company that this pricebook belongs to</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Pricebooks</relationshipLabel>
        <relationshipName>Pricebooks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to currency</description>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Pricebook Currency</relationshipLabel>
        <relationshipName>Pricebook_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A checkmark indicates that this is the default pricebook. When a product that does not have a default pricebook is added to a sales order, the system uses the default pricebook.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Details about this pricebook</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Pricebook_Default_Unique__c</fullName>
        <description>Only one default pricebook per company</description>
        <label>Pricebook Default Unique</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Pricebook_Unique__c</fullName>
        <description>Unique key to prevent duplicates records.</description>
        <label>Pricebook Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Key for data loading</description>
        <externalId>true</externalId>
        <label>Primary Key</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Trade_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This pricebook includes the list prices for use in the Trade Promotions app</description>
        <inlineHelpText>A checkbook indicates that the pricebook includes list prices for use in Trade Promotions.</inlineHelpText>
        <label>Trade Promotion</label>
        <type>Checkbox</type>
    </fields>
    <label>Pricebook</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Currency__c</columns>
        <columns>Description__c</columns>
        <columns>Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pricebook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricebooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Mandatory_Currency_Field</fullName>
        <active>true</active>
        <description>Currency Field is mandatory</description>
        <errorConditionFormula>ISBLANK(Currency__c)</errorConditionFormula>
        <errorMessage>Please enter a value for Currency field</errorMessage>
    </validationRules>
</CustomObject>